feat: novas métricas (nmrr, tcv, p1)
