# apps/api/swagger.json
@@ -177,6 +177,16 @@
             "type": "string",
             "format": "date-time",
             "nullable": true
+          },
+          "first_payment_date": {
+            "type": "string",
+            "format": "date-time",
+            "nullable": true
+          },
+          "first_payment_amount": {
+            "type": "string",
+            "description": "Decimal",
+            "nullable": true
           }
         }
       }
